static files updated

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PCAT Photo App ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/hudayihancerli/PCAT/issues"
   },
-  "homepage": "https://github.com/hudayihancerli/PCAT#readme"
+  "homepage": "https://github.com/hudayihancerli/PCAT#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
+  }
 }
